fix: 사진 여러장 등록 구현 수정